--- a/lib/dedalo/component_html_text/css/component_html_text.less
+++ b/lib/dedalo/component_html_text/css/component_html_text.less
@@ -4,6 +4,8 @@
 // Usage
 @import "@{common_css}/library.less";
 
+
+
 // css_wrap_html_text
 	.css_wrap_html_text, .css_wrap_html_text_tm {
 
@@ -18,7 +20,6 @@
 			padding: 0;
 			vertical-align: top;
 			display: inline-block;
-
 		}
 
 		.component_tools_container {
@@ -26,7 +27,6 @@
 		}
 
 	}
-
 
 
 
@@ -43,24 +43,26 @@
 		overflow: hidden;
 		/*white-space: nowrap;*/
 	}
-/* TOOL_LANG MODE */
-	.html_text_tool_lang .content_data {
-		width: 100%;
-	}
 
 
-/*-- TOOL TRANSCRIPTION MODE --*/
-	.html_text_tool_transcription .content_data {
-		width: 98.9%;
-		padding: 0;
-		padding-left: 4px;
-		}
-		.html_text_tool_transcription .css_label {
+// TOOL TRANSCRIPTION MODE
+	.html_text_tool_transcription {
+
+		.css_label {
 			display: none !important;
 		}
 
+		.content_data {
+			width: 98.9%;
+			padding: 0;
+			padding-left: 4px;
+		}
+	}
 
-/* HTML_TEXT editor */
+
+
+
+// HTML_TEXT editor
 	.css_html_text {
 		padding: 3px;
 		border: 1px solid #9E9E9E;
@@ -68,18 +70,17 @@
 		box-shadow: inset 0 0 6px #999999;
 		width: 81.5%;
 		vertical-align: top;
-		/*min-height:14px;*/
+		// min-height:14px;
+		// height: 1800px;
 
-		height: 1800px;
+		&:hover {
+			background-color: #F1F1F1;
+		}
+		&:focus {
+			box-shadow: 0 0 5px #CCC;
+		}
 	}
-	.css_html_text:hover {
-		background-color: #F1F1F1;
-	}
-	.css_html_text:focus {
-		box-shadow: 0 0 5px #CCC;
-	}
-	.css_html_text:active {
-	}
+
 
 
 
@@ -131,23 +132,40 @@
 
 
 // test for tiny height to 100%
-	/**/
-	.css_wrap_html_text {
+	// .css_wrap_html_text {
 
-		.mce-tinymce.mce-container.mce-panel, .mce-stack-layout, .mce-edit-area {
-	        display: flex !important;
-	        flex-direction: column;
-	        flex: 1;
-	        align-items: stretch;
-	        //height: 97%;
-	        //height: 96.8%;
+	// 	.mce-tinymce.mce-container.mce-panel, .mce-stack-layout, .mce-edit-area {
+	//         display: flex !important;
+	//         flex-direction: column;
+	//         flex: 1;
+	//         align-items: stretch;
+	//         //height: 97%;
+	//         //height: 96.8%;
+	// 	}
+	// 	.mce-tinymce.mce-container.mce-panel {
+	// 		height: 96.8%;
+	// 	}
+	// 	.mce-tinymce iframe {
+	// 		flex: 1;
+	// 	}
+	// }
+
+
+
+// tol lang context. wrap_tool_lang_component_source
+	#wrap_tool_lang_component_source, #wrap_tool_lang_component_target {
+
+		.css_wrap_html_text {
+			// background-color: #2AF075;
+			height: 80vh;
+
+			.content_data {
+				width: 100%;
+				height: 100%;
+			}
 		}
-		.mce-tinymce.mce-container.mce-panel {
-			height: 96.8%;
-		}
-		.mce-tinymce iframe {
-			flex: 1;
-		}
+
 	}
+
 
 
