Fixed issue when search items temporal styles are reset on every operator change by user

--- a/lib/dedalo/search/css/search.less
+++ b/lib/dedalo/search/css/search.less
@@ -984,8 +984,9 @@
 
 // duplicate tipo
 	.duplicate_tipo {
-		//background-color: #FD4828;
-		border: 2px dashed #fd0000 !important;
+		// background-color: #FD4828;
+		// border: 2px dashed #fd0000 !important;
+		outline: 1px dashed #fd0000!important;
 	}
 
 
