--- a/core/component_geolocation/css/component_geolocation.less
+++ b/core/component_geolocation/css/component_geolocation.less
@@ -143,7 +143,7 @@
 
 /* MAP FULL SCREEN
 -------------------------------------------------- */
-	
+
 
 .leaflet-top,
 .leaflet-bottom {
@@ -186,7 +186,7 @@
 
 		    		>div {
 						display: : flex;
-					
+
 
 						>label {
 							margin-right: 0.5em;
@@ -216,7 +216,7 @@
 				margin: 0;
 				padding: 0;
 				padding-bottom: 5px;
-				z-index: 1;
+				// z-index: 1;
 
 				background-color: #d9d0c9;
 				max-height: 100%;
