First version of thesaurus functional

--- a/core/area_thesaurus/css/area_thesaurus.less
+++ b/core/area_thesaurus/css/area_thesaurus.less
@@ -88,9 +88,9 @@
 			}
 			*/
 
-		/* HIERARCHY_ROOT_NODE Container (childrens container)
+		/* HIERARCHY_ROOT_NODE Container (children container)
 		------------------------------------------------ */
-		.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container {
+		.css_wrap_area_thesaurus .hierarchy_root_node > .children_container {
 			//background-color: #EDEDED;
 			//min-height: @ts_line_height;
 			//padding: 7px;			
@@ -99,13 +99,13 @@
 			}
 			/* ID_COLUMN_CONTENT
 			------------------------------------------------ */
-			.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container > .wrap_ts_object > .id_column_content {
+			.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content {
 
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container > .wrap_ts_object > .id_column_content > .ts_object_drag {
+				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_drag {
 					display: none;
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container > .wrap_ts_object > .id_column_content > .ts_object_delete {
+				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_delete {
 					display: none;
 				}
 			/* ELEMENTS_CONTAINER
@@ -116,7 +116,7 @@
 				}
 				/* HIERARCHY_NAME like 'España'
 				------------------------------------------------ */
-				.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container > .wrap_ts_object > .elements_container > .list_thesaurus_element {
+				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element {
 					//width: 100%;				
 					//padding: 7px;
 					//background-color: #727272;
@@ -131,7 +131,7 @@
 					text-transform: uppercase;
 					padding-left: 0;
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .childrens_container > .wrap_ts_object > .elements_container > .list_thesaurus_element:hover {
+				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element:hover {
 					//cursor: default;
 					color: inherit;
 				}
@@ -238,7 +238,7 @@
 				.wrap_component_hierarchy35 .content_data {
 					.reset_content_data;
 				}
-			// Childrens
+			// Children
 			.wrap_component_muvaet274 {
 
 				}
