--- a/core/ts_object/css/ts_object.less
+++ b/core/ts_object/css/ts_object.less
@@ -28,7 +28,7 @@
 		&:hover > .id_column_content {
 			opacity: 1;
 		}
-	}	
+	}
 	
 
 	/* icons COMMON (ts_icons_all)
@@ -84,7 +84,7 @@
 					mask: url(../../../themes/default/add.svg) no-repeat 50% 50%;
 					*/
 					.ts_icons_all;
-					background-image: url(../../themes/default/add.svg);					
+					background-image: url(../../themes/default/icons/add.svg);					
 					padding: 6px;
 				}
 				.ts_object_add_icon:hover {
@@ -107,7 +107,7 @@
 					mask: url(../../../themes/default/add.svg) no-repeat 50% 50%;
 					*/
 					.ts_icons_all;
-					background-image: url(../../themes/default/move.svg);					
+					background-image: url(../../themes/default/icons/move.svg);					
 					}
 					.ts_object_drag_icon:hover {
 						background-color: #B5A83A;
@@ -133,7 +133,7 @@
 					.ts_icons_all;
 					//background-image: url(../../themes/default/icon_delete.svg);
 					//background-size: 52%;
-					background-image: url(../../themes/default/trash.svg);
+					background-image: url(../../themes/default/icons/trash-o.svg);
 					background-size: 76%;
 					margin-right: 2px;		
 					}
@@ -199,7 +199,7 @@
 				------------------------------------------------------- */
 				.wrap_ts_object .ts_object_edit .ts_object_edit_icon {
 					float: left;							
-					background-image: url(../../themes/default/icon_edit.svg);
+					background-image: url(../../themes/default/icons/icon_edit.svg);
 					background-repeat: no-repeat;
 					background-size: 70%;
     				background-position: center;
@@ -338,7 +338,7 @@
 			}
 
 	
-		/* TS_OBJECT_CHILDRENS_ARROW_ICON
+		/* TS_OBJECT_CHILDREN_ARROW_ICON
 		---------------------------------------- */	    
 		.term_img{
 			padding: 0px !important;
@@ -349,7 +349,7 @@
 
 
 
-		/* TS_OBJECT_CHILDRENS_ARROW_ICON
+		/* TS_OBJECT_CHILDREN_ARROW_ICON
 		---------------------------------------- */
 		@triangle_color:#ff8600;
 		.triangle_down {
@@ -366,7 +366,7 @@
 			border-width: 6px 0 6px 10.4px;
 			border-color: transparent transparent transparent @triangle_color;
 		}
-		.wrap_ts_object .elements_container .ts_object_childrens_arrow_icon {
+		.wrap_ts_object .elements_container .ts_object_children_arrow_icon {
 			//background-color: #C5C5C5;
 			//padding: 1px;
 			//border-radius: 3px;
@@ -380,16 +380,16 @@
 			.triangle_right;
 			opacity: 0.6;
 			}
-			/*.ts_object_childrens_arrow_icon:before{
+			/*.ts_object_children_arrow_icon:before{
 				content: " > ";//▶︎▼
 				display: block;
 				font-size: 1.4em;
 			}*/
-			.wrap_ts_object .elements_container .ts_object_childrens_arrow_icon:hover {
+			.wrap_ts_object .elements_container .ts_object_children_arrow_icon:hover {
 				//background-color: #C9C9C9
 				opacity: 1;
 			}
-			.wrap_ts_object .elements_container .ts_object_childrens_arrow_icon_open {
+			.wrap_ts_object .elements_container .ts_object_children_arrow_icon_open {
 				//  -webkit-transform: rotate(90deg);
 				//   transform: rotate(90deg);
 				.triangle_down;
@@ -398,7 +398,7 @@
 			}
 			.wrap_ts_object .elements_container .arrow_spinner {
 				//background-color: aqua;
-				background: url(../../themes/default/spinner.svg);
+				background: url(../../themes/default/icons/spinner.svg);
 				background-repeat: no-repeat;
 				border: none;
 				height: 18px;
@@ -412,7 +412,7 @@
 			.wrap_ts_object .elements_container .arrow_unactive {
 				display: none;
 			}
-			.wrap_ts_object .elements_container [data-type="link_childrens"] {
+			.wrap_ts_object .elements_container [data-type="link_children"] {
 				border: none;
 				opacity: 1;
 			}
@@ -444,9 +444,9 @@
 	
 
 
-	/* CHILDRENS_CONTAINER
+	/* CHILDREN_CONTAINER
 	------------------------------------------------------- */
-	.wrap_ts_object .childrens_container {
+	.wrap_ts_object .children_container {
 		//background-color: rgba(248, 182, 175, 0.49);
 		.inline_common ;
 		width: 100%;
@@ -455,7 +455,7 @@
 		padding-left: 27px;
 	}
 
-	/* CHILDRENS_TOOGLE_VIEW
+	/* CHILDREN_TOOGLE_VIEW
 	------------------------------------------------------- */
 	.wrap_ts_object .removed_from_view {
 		display: none;
@@ -465,7 +465,7 @@
 
 	/* ND_BUTTON
 	------------------------------------------------------- */
-	.wrap_ts_object .elements_container .list_thesaurus_element[data-type='link_childrens_nd'] {
+	.wrap_ts_object .elements_container .list_thesaurus_element[data-type='link_children_nd'] {
 		//background-color: #E1F01B
 		}
 
@@ -548,7 +548,7 @@
 				display: table-cell;
 				padding: 10px;
 				padding-left: 45px;
-				background: url(../../themes/default/spinner.svg);
+				background: url(../../themes/default/icons/spinner.svg);
 				background-position: 10px;
 				background-size: 30px;
 				background-repeat: no-repeat;
