--- a/core/paginator/css/paginator.less
+++ b/core/paginator/css/paginator.less
@@ -55,25 +55,29 @@
 				.paginator_first_icon {
 					//background-image: url('../../themes/default/icons/backward.svg');
 					//background-image: url('../../themes/default/icons/forward.svg');
-					.background_icon('forward.svg');
+					// .background_icon('forward.svg');
+					.build_button('forward.svg', black, 1);
 					transform: scaleX(-1);
 					background-size: 80%;
 				}
 
 				.paginator_prev_icon {
 					//background-image: url('../../themes/default/icons/play.svg');
-					.background_icon('play.svg');
+					// .background_icon('play.svg');
+					.build_button('play.svg', black, 1);
 					transform: scaleX(-1);
 				}
 
 				.paginator_next_icon {
 					//background-image: url('../../themes/default/icons/play.svg');
-					.background_icon('play.svg');
+					// .background_icon('play.svg');
+					.build_button('play.svg', black, 1);
 				}
 
 				.paginator_last_icon {
 					//background-image: url('../../themes/default/icons/forward.svg');
-					.background_icon('forward.svg');
+					// .background_icon('forward.svg');
+					.build_button('forward.svg', black, 1);
 					background-size: 80%;
 				}
 
