--- a/core/menu/css/menu.less
+++ b/core/menu/css/menu.less
@@ -211,8 +211,9 @@ background-color: #FFFF00;
 					// height: 1em;
 					// float: right;
 					// opacity: 0.7;
-					.icon_svg;
-					.background_icon('list_white.svg');
+					// .icon_svg;
+					// .background_icon('list_white.svg');
+					.build_button('list_white.svg', white, 1);
 					height: 100%;
 					height: 2em;
 					float: left;
