Fix section list row icons color from white to black

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -656,11 +656,11 @@
 							//.icon_svg;
 							//background-image: url(../../themes/default/icons/edit.svg);
 							// .background_icon('edit.svg');
-							.build_button('edit.svg', white, 1);
+							.build_button('edit.svg', black, 1);
 
 							&.tm_preview {
 								// .background_icon('eye.svg');
-								.build_button('eye.svg', white, 1);
+								.build_button('eye.svg', black, 1);
 
 							}
 						}
@@ -677,7 +677,7 @@
 							//.icon_svg;
 							//background-image: url(../../themes/default/icons/trash-o.svg);
 							// .background_icon('trash-o.svg');
-							.build_button('trash-o.svg', white, 1);
+							.build_button('trash-o.svg', black, 1);
 						}
 					}
 				}//end id_column
