Unify init and compatiblity with filter (search)

--- a/core/area_thesaurus/css/area_thesaurus.less
+++ b/core/area_thesaurus/css/area_thesaurus.less
@@ -6,12 +6,12 @@
 */
 @ts_line_height: 34px;
 
-/* WRAPPER : CSS_WRAP_AREA_THESAURUS
+/* WRAPPER : AREA_THESAURUS
 ------------------------------------------------ */
-.css_wrap_area_thesaurus {
+.area_thesaurus {
 	font-family: Arial,sans-serif;
 	}
-	.css_wrap_area_thesaurus > ul {
+	.area_thesaurus > ul {
 		padding: 25px;
 		padding-top: 10px;
 		background-color: rgba(255, 255, 255, 0.84);
@@ -19,11 +19,11 @@
 		margin-top: 0;
 		border-radius: 5px;
 		}
-		.css_wrap_area_thesaurus > ul > li {
+		.area_thesaurus > ul > li {
 		}
-		/* TIPOLOGY_NAME like 'Toponomy'
+		/* typology_name like 'Toponomy'
 		------------------------------------------------ */
-		.css_wrap_area_thesaurus .tipology_name {
+		.area_thesaurus .typology_name {
 			background-color: rgba(230, 230, 230, 0.88);
 			padding: 7px;
 			padding-bottom: 5px;
@@ -38,10 +38,10 @@
 			//background-size: 12px;
 			//background-position: right 10px center;   
 			}
-			.css_wrap_area_thesaurus .tipology_name:hover {
+			.area_thesaurus .typology_name:hover {
 				background-color: #E0E0E0;
 			}
-			.css_wrap_area_thesaurus .tipology_name:active {
+			.area_thesaurus .typology_name:active {
 				background-color: #BBBBBB;
 				color: #ffffff;
 			}
@@ -52,16 +52,16 @@
 			background-position: right 10px center;
 			opacity: 0.5;
 		}
-		.css_wrap_area_thesaurus .tipology_name_model {
+		.area_thesaurus .typology_name_model {
 			background-color: rgb(245, 158, 61);			
 			color: white;
 		}
-		.css_wrap_area_thesaurus .tipology_name_model:before {
+		.area_thesaurus .typology_name_model:before {
 			content: " [M]";
 		}
 		/* HIERARCHY_NAME like 'España'
 		------------------------------------------------ *//*
-		.css_wrap_area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name {
+		.area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name {
 			width: 100%;				
 			//padding: 7px;
 			//background-color: #727272;
@@ -76,11 +76,11 @@
 			text-transform: uppercase;
 			padding-left: 0;
 			}
-			.css_wrap_area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name:hover {
+			.area_thesaurus .elements_container .list_thesaurus_element.hierarchy_name:hover {
 				cursor: default;
 				color: inherit;
 			}
-			.css_wrap_area_thesaurus .elements_container .hierarchy_name .ts_object_add {
+			.area_thesaurus .elements_container .hierarchy_name .ts_object_add {
 				display: inline-block;
 				position: relative;
 				top: 5px;
@@ -90,7 +90,7 @@
 
 		/* HIERARCHY_ROOT_NODE Container (children container)
 		------------------------------------------------ */
-		.css_wrap_area_thesaurus .hierarchy_root_node > .children_container {
+		.area_thesaurus .hierarchy_root_node > .children_container {
 			//background-color: #EDEDED;
 			//min-height: @ts_line_height;
 			//padding: 7px;			
@@ -99,24 +99,24 @@
 			}
 			/* ID_COLUMN_CONTENT
 			------------------------------------------------ */
-			.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content {
+			.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content {
 
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_drag {
+				.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_drag {
 					display: none;
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_delete {
+				.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .id_column_content > .ts_object_delete {
 					display: none;
 				}
 			/* ELEMENTS_CONTAINER
 			------------------------------------------------ */
-			.css_wrap_area_thesaurus .hierarchy_root_node > .elements_container {
+			.area_thesaurus .hierarchy_root_node > .elements_container {
 				//height: 0;
 				display: none;
 				}
 				/* HIERARCHY_NAME like 'España'
 				------------------------------------------------ */
-				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element {
+				.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element {
 					//width: 100%;				
 					//padding: 7px;
 					//background-color: #727272;
@@ -131,7 +131,7 @@
 					text-transform: uppercase;
 					padding-left: 0;
 				}
-				.css_wrap_area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element:hover {
+				.area_thesaurus .hierarchy_root_node > .children_container > .wrap_ts_object > .elements_container > .list_thesaurus_element:hover {
 					//cursor: default;
 					color: inherit;
 				}
