--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -86,6 +86,34 @@
 			}
 		}
 
+// generic html inputs appearance
+	.dd_input {
+		font-size: 1em;
+		height: 2.0em;
+
+		margin-right: 0.5em;
+		padding: 0.5em;
+		//border-radius: 3px;
+		border: none;
+		outline: 1px solid #eeebeb;
+
+		transition: all .5s ease, padding 0s;
+		//transition: padding 0s;
+		opacity: 0.75;
+		vertical-align: bottom;
+
+		// &.typology_selector { // , &input[type="select"]
+		&,select {
+			width: 100%;
+		}
+
+		// on focus inputs, adds a soft shadow and outline
+		&:focus {
+			.hilite;
+		}
+	}
+
+
 
 
 // base mixins
