Fix css z-index issues in components

--- a/core/component_geolocation/css/component_geolocation.less
+++ b/core/component_geolocation/css/component_geolocation.less
@@ -173,6 +173,7 @@
 		    	>li {
 		    		flex: 1 1 auto;
 		    		flex-direction: column;
+		    		// z-index: 1;
 
 		    		&.map_full{
 						z-index: 2;
