Change the css of canvas in component_image

--- a/core/page/css/layout/layout.less
+++ b/core/page/css/layout/layout.less
@@ -809,9 +809,19 @@
 					height: 100%;
 					max-height: @media_max_height;
 
+					// .canvas[resize] {
+					// 	width: 100%;
+					// 	height: 100%;
+					// }
+
 					.canvas[resize] {
-						width: 100%;
 						height: 100%;
+						//height: auto;
+						max-height: 100%;
+						width: 100%;
+						max-width: 100%;
+						object-fit: contain;
+						// object-position: center;
 					}
 
 					// image
